--- a/docs/编程语言/C/一些常犯的小错误.md
+++ b/docs/编程语言/C/一些常犯的小错误.md
@@ -1,7 +1,7 @@
 # 一些常犯的小错误
-
-1. for(**int** i =  **;**  **;**  )  有没有定义i、注意是分号
-2. scanf(" ",**&**); 不要忘记&
-3. if() 相等条件判断关注**==**
-4. ==是**2*i**不是2i==
-5. 用于计数的变量要**初始化**
+!!! danger "注意"
+    1. for(**int** i =  **;**  **;**  )  有没有定义i、注意是分号
+    2. scanf(" ",**&**); 不要忘记&
+    3. if() 相等条件判断关注**==**
+    4. 是**2*i**不是2i
+    5. 用于计数的变量要**初始化**
