--- a/docs/CS/编程语言/C/一些概念性知识.md
+++ b/docs/CS/编程语言/C/一些概念性知识.md
@@ -44,7 +44,7 @@
 
    1. 单目：！；双目：&&、||
 
-   2. ==逻辑运算符&&、||的运算优先级低于关系运算符==
+   2. 逻辑运算符&&、||的运算优先级低于关系运算符
 
    ```C
    判断ch是否为小写英文字母，以下两种写法等价
@@ -97,7 +97,7 @@
        else  语句4  
    ```
 
-   ==else和if的匹配准则==：else与**最靠近它的**、**没有与别的else匹配过的** if 匹配（不要被缩进迷惑了...）
+   else和if的匹配准则：else与**最靠近它的**、**没有与别的else匹配过的** if 匹配（不要被缩进迷惑了...）
 
 ## 第四章 循环
 
@@ -135,6 +135,63 @@ while (条件)
 2. 形参和实参一一对应：数量一致，类型尽量一致，顺序一致
 3. 形参：**变量**，用于接受实参传递过来的值；实参：**常量、变量或表达式**
 4. 传递是**单向**的：只允许实参把值复制给形参，形参值即使在函数中改变了，也不会反过来影响实参。
+## 第六章 数据类型和表达式
+### 基本数据类型
+#### 输入输出中的格式控制符
+
+| 控制符                               | 说明                                                                                                 |
+| --------------------------------- | -------------------------------------------------------------------------------------------------- |
+| `%d`                              | 十进制整型                                                                                              |
+| `%ld`                             | 十进制长整型                                                                                             |
+| `%md` （$m \in \text{R}$，如 `%2d` ） | m 为指定的输出字段的宽度。如果数据的位数小于 m，则左端补以空格，若大于 m，则按实际位数输出。<br>如果加`-`表示左对齐；如果加`+`或不加表示右对齐。                   |
+| 如`%-2d`，`%+3d`                    |                                                                                                    |
+| `%u`                              | 十进制无符号整型                                                                                           |
+| `%lu`                             | 十进制无符号长整型                                                                                          |
+| `%c`                              | 字符                                                                                                 |
+| `%e`                              | 对于 `scanf` 仅表示单精度浮点数<br>对于 `printf` 与 `%lf` 等价。不指定字段宽度，由系统自动指定，整数部分全部输出，小数部分输出 6 位，超过 6 位的**四舍五入** |
+| `%.mf`（，如`%.6f`）                  | 输出实数时**小数点后**保留 m 位                                                                                |
+| `%le`                             | 对于 `scanf` 仅表示双精度浮点数<br>对于 `printf` 与 `%f` 等价。不指定字段宽度，由系统自动指定，整数部分全部输出，小数部分输出 6 位，超过 6 位的**四舍五入**  |
+| `%.mlf`（，如 `%.6lf`）               | 输出实数时**小数点后**保留 m 位                                                                                |
+| `%p`                              | 地址                                                                                                 |
+| `%s`                              | 字符串                                                                                                |
+| `%o`                              | 八进制整型                                                                                              |
+| `%lo`                             | 八进制长整型                                                                                             |
+| `%x` `%X` `%#x` `%#X`             | 十六进制整型                                                                                             |
+| `%lx` `%lX`                       | 十六进制长整型                                                                                            |
+
+#### 常见转义字符
+
+| 转义字符 | 意义 | ASCII（Dec） | ASCII（Hex） |
+| --- | --- | --- | --- |
+| `\b` | 退格(BS) ，将当前位置移到前一列 | 008 | 0x08 |
+| `\n` | 换行(LF) ，将当前位置移到下一行开头 | 010 | 0x10 |
+| `\r` | 回车(CR) ，将当前位置移到本行开头 | 013 | 0x13 |
+| `\t` | 水平制表(HT)  | 009 | 0x09 |
+| `\'` | 单引号 | 039 | 0x27 |
+| `\"` | 双引号 | 034 | 0x22 |
+| `\\` | 反斜杠 | 092 | 0x5C |
+| `\ddd`  | 1~3位的八进制整数所代表的ASCII符<br>比如 `\041` 或者 `\41` 表示 `!` | - | - |
+| `\xhh` | 1~2位的十六进制整数所表示的ASCII符<br>比如 `\x21` 表示 `!` | - | - |
+
+#### 运算符优先级
+
+| 优先级 |                        运算符                         |   结合律    |
+| :-: | :------------------------------------------------: | :------: |
+|  1  |                后缀运算符：[]  ()  ·  ->                 |   从左到右   |
+|  2  | 一元运算符：++  --  !  ~  +（正）  -（负）  *  &  sizeof 类型转换  | **从右到左** |
+|  3  |                   乘除法运算符：*  /  %                   |   从左到右   |
+|  4  |                    加减法运算符：+  -                     |   从左到右   |
+|  5  |                    移位运算符：<<  >>                    |   从左到右   |
+|  6  |                 关系运算符：<  <=  >  >=                 |   从左到右   |
+|  7  |                    相等运算符：==  !=                    |   从左到右   |
+|  8  |                     位运算符 AND：&                     |   从左到右   |
+|  9  |                     位运算符 XOR：^                     |   从左到右   |
+| 10  |                     位运算符 OR：\|                     |   从左到右   |
+| 11  |                    逻辑运算符 AND：&&                    |   从左到右   |
+| 12  |                   逻辑运算符 OR：\|\|                    |   从左到右   |
+| 13  |                      条件运算符：?:                      | **从右到左** |
+| 14  | 赋值运算符：=  +=  -=  *=  /=  %=  &=  ^=  \|=  <<=  >>= | **从右到左** |
+| 15  |                      逗号运算符：，                       |   从左到右   |
 
 ## 第七章 数组
 
