--- a/docs/CS/编程语言/C/一些概念性知识.md
+++ b/docs/CS/编程语言/C/一些概念性知识.md
@@ -100,6 +100,13 @@
    else和if的匹配准则：else与**最靠近它的**、**没有与别的else匹配过的** if 匹配（不要被缩进迷惑了...）
 
 ## 第四章 循环
+### for语句
+
+```C
+for (初始化表达式; 循环条件表达式; 迭代表达式)
+      循环体语句;  
+```
+- 初始化表达式只在进入循环前执行一次。
 
 ### while语句
 
@@ -136,8 +143,69 @@ while (条件)
 3. 形参：**变量**，用于接受实参传递过来的值；实参：**常量、变量或表达式**
 4. 传递是**单向**的：只允许实参把值复制给形参，形参值即使在函数中改变了，也不会反过来影响实参。
 ## 第六章 数据类型和表达式
-### 基本数据类型
-#### 输入输出中的格式控制符
+
+### 原码、反码和补码
+- 一个字节Byte有8个bit位
+- 补码定义
+    - 正数：原码=反码=补码，符号位为0，其余各位表示数值
+    - 负数：
+        - 原码：符号位为1，其余各位表示数值的绝对值
+        - 反码：符号位为1，其余各位对源码取反
+        - 补码：反码+1（不一定对）
+        - 补码的补码=原码（可以这么理解，补码源码是一种相互关系，一一对应，二者相加恰好溢出一位）
+        ??? note "example 1"
+            - 11111010 表示？
+            - 对11111010取补码
+            - 补码11111010取反得10000101，再加1得10000110（即-6的原码），此时可按原码读取
+        ??? note "example 2"
+            ```c
+            char c = 1
+            while(c){
+                c++;
+            }
+            ```
+            上面程序中c从1开始增加，到127(01000000)时,再加1得10000000，变为-128，然后再自增至0后退出循环，故上述程序并非死循环
+            !!! danger "注意"
+                - 10000000是-128,是规定，为了统一，-128=(-1)-(127),即(11111111) - (01111111)，不满足补码=反码+1（也可以理解为找不到原码，无从取反？）
+        ??? note "常见的例子"
+            - -32767
+                - 原码   1 111 1111 1111 1111
+                - 反码   1 000 0000 0000 0000  原码取反（符号位保持不变）
+                - 补码   1 000 0000 0000 0001  反码＋1
+            - -32768 = -32767-1
+                - 补码   1 000 0000 0000 0000
+                - (2个字节的存储单元能表示的最小负数)
+
+
+- 补码意义：
+    - 使得0和-0的表示是唯一的
+    - 使得减法可以用加法做，即：a-b=a+(-b)
+
+### 数据类型
+
+
+
+#### 整型
+- **有符号整型**
+    - int    数据长度：16 或 32 位
+    - short  数据长度：16 位
+    - long   数据长度：32 位
+
+- **无符号整型**
+    - unsigned int     数据长度：16 或 32 位
+    - unsigned short   数据长度：16 位
+    - unsigned long    数据长度：32 位
+
+#### 字符型
+- char    数据长度：8 位
+
+#### 实型（浮点型）
+- float   数据长度：32 位
+- double  数据长度：64 位
+
+
+
+### 输入输出中的格式控制符
 
 | 控制符                               | 说明                                                                                                 |
 | --------------------------------- | -------------------------------------------------------------------------------------------------- |
@@ -159,7 +227,7 @@ while (条件)
 | `%x` `%X` `%#x` `%#X`             | 十六进制整型                                                                                             |
 | `%lx` `%lX`                       | 十六进制长整型                                                                                            |
 
-#### 常见转义字符
+### 常见转义字符
 
 | 转义字符 | 意义 | ASCII（Dec） | ASCII（Hex） |
 | --- | --- | --- | --- |
@@ -172,6 +240,17 @@ while (条件)
 | `\\` | 反斜杠 | 092 | 0x5C |
 | `\ddd`  | 1~3位的八进制整数所代表的ASCII符<br>比如 `\041` 或者 `\41` 表示 `!` | - | - |
 | `\xhh` | 1~2位的十六进制整数所表示的ASCII符<br>比如 `\x21` 表示 `!` | - | - |
+
+### 类型转换
+#### 自动类型转换
+??? note "example"
+    int a = 1.999; a=?<br>
+    a=1
+
+#### 强制类型转换
+- 一般形式：`(类型名称)表达式`
+
+### 表达式
 
 #### 运算符优先级
 
@@ -192,6 +271,52 @@ while (条件)
 | 13  |                      条件运算符：?:                      | **从右到左** |
 | 14  | 赋值运算符：=  +=  -=  *=  /=  %=  &=  ^=  \|=  <<=  >>= | **从右到左** |
 | 15  |                      逗号运算符：，                       |   从左到右   |
+
+#### 自增运算符和自减运算符
+- 运算对象只能是变量，不能是常量或表达式。
+??? failure "错误示例"
+    ```c
+    3++;
+    ++(i+j);
+    ```
+- y=x++,则y=x,x=x+1(这里的x是自增前的x) 
+- y=++x,则y=x+1,x=x+1(这里的x是自增后的x) 
+
+#### 长度运算符
+- `sizeof` ：返回变量或数据类型的字节长度。
+
+#### 赋值表达式
+- 右结合，x=y=3 ⇔ x=(y=3),但是注意x，y都需要定义，如果只是int x=y=3, 则y没定义。
+- x\*=y-3 ⇔ x=x\*(y-3) 乘赋值也是赋值运算符,优先级低于算数运算符。
+
+#### 逻辑表达式
+!!! note "短路"
+    ```c
+    int x=1,y=2,z=3;
+    z=((x=0)&&(y=1))    //注意里面是赋值，x=0是短路，y=1不会执行
+    //z=0,x=0,y=1
+    ```
+#### 逗号表达式
+- 一般形式：`表达式1，表达式2，...，表达式n`
+- 运算过程：从左到右依次计算表达式(表达式1~n均会被执行)，并将表达式n的值作为逗号表达式的值，表达式n的类型作为逗号表达式的类型。
+- 如果是`表达式1，表达式2，表达式3...，表达式n;`相当于表达式的值不要，就是依次执行n个表达式，也等价于`表达式1 ; 表达式2 ; ... ; 表达式n ;`
+- 应用：for循环的初始化表达式。
+
+#### 位运算
+##### 位逻辑运算
+- 与：`&`
+    - 应用：判断一个数某位是0还是1
+- 或：`|`
+- 非：`~`
+- 异或：`^`
+##### 移位运算
+- 不改变原操作数的值
+- 左移：`<<`  
+    - 补0
+    - 对正整数而言左移n位相当于乘以2的n次方
+- 右移：`>>`
+    - 前补符号位，后补0，如果是unsign int，则补0
+    - 对正整数而言右移n位相当于除以2的n次方
 
 ## 第七章 数组
 
